@@ -1,21 +1,21 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Blueprint CSS - Grid</title>
-    
-    <!-- Framework CSS -->
-    <link rel="stylesheet" href="../screen.css" type="text/css" media="screen, projection">
-    <link rel="stylesheet" href="../print.css" type="text/css" media="print">
-    
-    <!-- Show the grid and baseline -->
-    <style type="text/css">
-      .container { background: url('../lib/img/grid.png'); }
-    </style>
-    
-  </head>
-  
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
+	<head>
+		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+		<title>Blueprint CSS - Grid Test</title>
+	  <!-- Framework CSS -->
+	  <link rel="stylesheet" href="../screen.css" type="text/css" media="screen, projection" />
+	  <link rel="stylesheet" href="../print.css" type="text/css" media="print" />
+	  
+	  <!-- Show the grid and baseline -->
+	  <style type="text/css">
+	    .container { background: url('../lib/img/grid.png'); }
+	  </style>
+	</head>
+
   <body>
     
     <!-- div.container -->
@@ -23,7 +23,7 @@
       
       <h2>Blueprint CSS Grid Demonstration</h2>
       
-      <hr>
+      <hr />
       
       <div class="column span-8">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -37,7 +37,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       </div>
       
-      <hr>
+      <hr />
       
       <div class="column span-6 append-1">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -51,7 +51,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       </div>
       
-      <hr>
+      <hr />
       
       <div class="column span-6 prepend-1">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -65,7 +65,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       </div>
       
-      <hr>
+      <hr />
       
       <div class="column span-12 border">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -75,7 +75,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
       
-      <hr>
+      <hr />
       
       <div class="column span-1 prepend-1"><p>1</p></div>
       <div class="column span-1 prepend-2"><p>2</p></div>
@@ -116,7 +116,7 @@
       <div class="column span-1 border"><p>23</p></div>
       <div class="column span-1 last"><p>24</p></div>
       
-      <hr>
+      <hr />
       
       <div class="column span-4"><p>1</p></div>
       <div class="column span-4"><p>2</p></div>
@@ -125,22 +125,22 @@
       <div class="column span-4"><p>5</p></div>
       <div class="column span-4 last"><p>6</p></div>
       
-      <hr>
+      <hr />
       
       <div class="column prepend-23 span-1 last"><p>24</p></div>
       
-      <hr>
+      <hr />
       
       <div class="column prepend-1 span-1"><p>2</p></div>
       <div class="column prepend-20 span-1 append-1 last"><p>23</p></div>
       
-      <hr>
+      <hr />
       
       <div class="span-24">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
       
-      <hr>
+      <hr />
       
       <div class="column span-12">
         <div class="column span-6">
@@ -167,13 +167,13 @@
         </div>
       </div>
       
-      <hr>
+      <hr />
       
       <div class="column span-14 prepend-5 append-5 last">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
       
-      <hr>
+      <hr />
     </div>
     <!-- /div.container -->
     
