@@ -1,0 +1,27 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
+<head>
+	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+	<title>Blueprint CSS - Sample and Test Documents</title>
+</head>
+
+<body>
+	
+	<h2>Blueprint CSS - Sample and Test Documents</h2>
+	
+	<p>Follow the links below to view the sample and test documents for the Blueprint CSS Framework.  These documents are designed to display the features of the framework and give you a starting point for writing your own grid based pages.  All of these test files are included with the Blueprint CSS framework and can be found in the 'tests' sub-directory.</p>
+	
+	<ul>
+		<li><a href="sample.html">sample.html</a> - A sample layout designed to show some of what is possible with a grid layout.</li>
+		<li><a href="grid.html">grid.html</a> - Shows some of what is possible with a grid layout.</li>
+		<li><a href="typography.html">typography.html</a> - Shows some of the typographic enhancements you get with use of Blueprint CSS.</li>
+	</ul>
+	
+	<p>We hope you enjoy using Blueprint CSS.</p>
+	
+</body>
+
+</html>
