@@ -12,7 +12,8 @@ Version 0.6 - TBD
 	* Added append-13 to append-23 and prepend-13 to prepend-23 to allow pushing elements
 		to both extreme sides of the grid. Added test cases to tests/grid.css [GR]
 	* Moved test sample files to blueprint/tests sub-directory so tests stay with the code. [GR]
-	* Consolidated all references to release version number to screen.css
+	* Consolidated all references to release version number to screen.css [OFB]
+	* Added index.html page to tests, modified all test pages so they are now validating cleanly as 'XHTML 1.0 Strict'
 
 
 Version 0.5 - 28/8/2007
